crates/keron-lang/tests/corpus/errors/check/coalesce_non_nullable_lhs.keron
val x: Int = 1 ?? 2
